[package]
name = "fyrox-core"
version = "0.28.1"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Shared core for the Fyrox engine and its external crates."
keywords = ["game", "engine", "3d"]
categories = ["game-development", "graphics", "gui", "rendering", "wasm"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
homepage = "https://fyrox.rs"
documentation = "https://docs.rs/fyrox-core"
repository = "https://github.com/FyroxEngine/Fyrox"
readme = "README.md"
rust-version = "1.72"

[dependencies]
fyrox-core-derive = { path = "../fyrox-core-derive", version = "0.23.0" }
fyrox-math = { path = "../fyrox-math", version = "0.2.0" }
base64 = "0.22.1"
byteorder = "1.4.3"
rand = "0.9.2"
memoffset = "0.9.0"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
arrayvec = "0.7.2"
futures = {version = "0.3.17", features = ["thread-pool"] }
uuid = { version = "1", features = ["v4", "js"] }
instant = "0.1.12"
num-traits = "0.2.14"
parking_lot = "0.12.0"
fxhash = "0.2.1"
bitflags = "2.2.1"
